[gd_scene load_steps=2 format=3 uid="uid://dialogue_box"]

[ext_resource type="Script" path="res://scripts/ui/dialogue_controller.gd" id="1_dialogue"]

[node name="DialogueController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_dialogue")

[node name="Portrait" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -320.0
offset_right = 220.0
offset_bottom = -120.0
grow_vertical = 0
expand_mode = 1
stretch_mode = 5

[node name="DialogueBox" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="DialogueBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SpeakerLabel" type="Label" parent="DialogueBox/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Speaker"

[node name="HSeparator" type="HSeparator" parent="DialogueBox/VBox"]
layout_mode = 2

[node name="TextLabel" type="RichTextLabel" parent="DialogueBox/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Dialogue text goes here..."
fit_content = true

[node name="ContinueIndicator" type="Control" parent="DialogueBox"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0

[node name="Arrow" type="Label" parent="DialogueBox/ContinueIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "â–¼"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoicesContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
